# quant-platform

./: .gitignore  IMPLEMENTATION_NOTES.md  README.md  pyproject.toml
configs/: experiment_plan.json  repo_blueprint.json  strategy_spec.json
data/etf_daily_stooq_trend_2010/: README.md  benchmark.csv  data_quality.json  metadata.csv  symbol_mapping.csv
data/real_us_daily_stooq_broader_2024_smoke/: README.md  bars.csv  benchmark.csv  corporate_actions.csv  data_quality.json  metadata.csv  symbol_mapping.csv
data/real_us_daily_stooq_higher_truth_2023/: README.md  benchmark.csv  data_quality.json  delistings.csv
data/real_us_daily_stooq_next_broader_2024_smoke/: README.md  bars.csv  data_quality.json  metadata.csv  symbol_mapping.csv
data/real_us_daily_stooq_realism_upgrade_2023/: README.md  bars.csv  benchmark.csv  data_quality.json  metadata.csv  symbol_mapping.csv
registry/: experiments.json
src/: cli.py  costs.py  data_contracts.py  experiment_plan.py  io.py  metrics.py  portfolio.py  risk.py  stopping.py  strategy_spec.py  universe.py
src/quant_platform/: audit_log.py  (+20 more)
tests/: test_backtest_engine.py  test_cli.py  test_costs.py  test_data_access.py  test_dataset_cli.py  test_etf_trend.py  test_external_dataset_import.py  test_external_dataset_validation.py  test_metrics.py  test_multiple_testing.py  test_overfitting.py  test_paper_runtime.py  test_portfolio_constraints.py  test_research_cli.py  test_research_ops.py  test_residual_momentum.py  test_signal_mean_reversion.py  test_stopping.py  test_strategy_spec.py  test_universe.py  test_walk_forward.py
(+61 files in other folders)
