[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-platform"
version = "0.1.0"
description = "Research-grade autonomous quant research, backtesting, and paper-trading platform"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "pandas>=2.2",
  "numpy>=1.26",
  "scipy>=1.12",
  "statsmodels>=0.14",
  "typing-extensions>=4.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
